# coinrun-world-model

./: .gitignore  Dockerfile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
coinrun_world_model/: __init__.py  cli.py  config.py  encode.py  evaluate.py  report.py  train_transformer.py  train_vqvae.py  utils.py
coinrun_world_model/data/: __init__.py  collect.py  procgen.py  zarr_dataset.py
coinrun_world_model/demo/: __init__.py  server.py
coinrun_world_model/demo/static/: app.js  index.html  styles.css
coinrun_world_model/eval/: __init__.py  metrics.py  probe.py
coinrun_world_model/models/: transformer.py  vqvae.py
configs/: default.yaml  mini.yaml
data/procgen_coinrun_mini/: manifest.json
data/procgen_coinrun_mini/test.zarr/: .zattrs
data/procgen_coinrun_mini/test.zarr/actions/: 0
data/procgen_coinrun_mini/test.zarr/codes/: 0.0.0
data/procgen_coinrun_mini/test.zarr/dones/: .zarray  0
data/procgen_coinrun_mini/test.zarr/episode_id/: 0
data/procgen_coinrun_mini/test.zarr/frames/: 0.0.0.0
data/procgen_coinrun_mini/test.zarr/level_seed/: 0
data/procgen_coinrun_mini/test.zarr/rewards/: .zarray
data/procgen_coinrun_mini/test.zarr/step/: 0
data/procgen_coinrun_mini/train.zarr/: .zattrs
data/procgen_coinrun_mini/train.zarr/actions/: .zarray  0  1  2  3
data/procgen_coinrun_mini/train.zarr/codes/: .zarray  0.0.0  1.0.0  2.0.0  3.0.0
data/procgen_coinrun_mini/train.zarr/dones/: .zarray  0  1  2
data/procgen_coinrun_mini/train.zarr/episode_id/: 0  1  2  3
data/procgen_coinrun_mini/train.zarr/frames/: .zarray  0.0.0.0  1.0.0.0  2.0.0.0  3.0.0.0
data/procgen_coinrun_mini/train.zarr/level_seed/: 1  2  3
data/procgen_coinrun_mini/train.zarr/rewards/: .zarray  2
data/procgen_coinrun_mini/train.zarr/step/: 0  1  2
data/procgen_coinrun_mini/val.zarr/: .zattrs
data/procgen_coinrun_mini/val.zarr/actions/: 0
data/procgen_coinrun_mini/val.zarr/codes/: .zarray  0.0.0
data/procgen_coinrun_mini/val.zarr/dones/: 0
data/procgen_coinrun_mini/val.zarr/episode_id/: .zarray  0
data/procgen_coinrun_mini/val.zarr/frames/: .zarray  0.0.0.0
data/procgen_coinrun_mini/val.zarr/level_seed/: 0
data/procgen_coinrun_mini/val.zarr/rewards/: 0
data/procgen_coinrun_mini/val.zarr/step/: 0
scripts/: make_demo_gif.py
tests/: test_dataset.py  test_demo.py  test_metrics.py  test_models.py  test_procgen_smoke.py
