[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "coinrun-world-model"
version = "0.1.0"
description = "Action-conditioned VQ-VAE + transformer world model for Procgen CoinRun."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = { text = "MIT" }
authors = [{ name = "CoinRun World Model Contributors" }]
dependencies = [
  "fastapi>=0.111",
  "hydra-core>=1.3",
  "imageio>=2.34",
  "matplotlib>=3.8",
  "numcodecs>=0.12",
  "numpy>=1.24,<2",
  "omegaconf>=2.3",
  "pandas>=2.2",
  "pillow>=10.3",
  "procgen==0.10.7",
  "rich>=13.7",
  "scikit-image>=0.23",
  "scipy>=1.11",
  "tensorboard>=2.16",
  "torch>=2.2",
  "torchvision>=0.17",
  "tqdm>=4.66",
  "typer>=0.12",
  "uvicorn[standard]>=0.29",
  "zarr>=2.16,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
wm = "coinrun_world_model.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["coinrun_world_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

